--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,21 @@ apply plugin: 'io.spring.dependency-management'
 group = 'io.github.wotjd243'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+description = 'Pokemon project with domain-driven design'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // Spring and Spring Boot dependencies
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // TODO (1) SpringBootApplication 추가
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // webjars
+    implementation 'org.webjars:webjars-locator:0.36'
+    implementation 'org.webjars:jquery:3.4.0'
+    implementation 'org.webjars:popper.js:1.15.0'
+    implementation 'org.webjars:bootstrap:4.3.1'
 }
