--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ dependencies {
     // Spring and Spring Boot dependencies
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    // TODO (1) spring-boot-starter-data-jpa 의존성 추가
+    // COMPLETED (1) spring-boot-starter-data-jpa 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // webjars
@@ -28,5 +29,6 @@ dependencies {
     implementation 'org.webjars:bootstrap:4.3.1'
 
     // Databases
-    // TODO (2) com.h2database:h2 의존성 추가
+    // COMPLETED (2) com.h2database:h2 의존성 추가
+    runtimeOnly 'com.h2database:h2'
 }
