--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ description = 'Pokemon project with domain-driven design'
 
 repositories {
     mavenCentral()
+    // TODO (1) maven repository 추가 ('http://jcenter.bintray.com')
 }
 
 dependencies {
@@ -29,4 +30,7 @@ dependencies {
 
     // Databases
     runtimeOnly 'com.h2database:h2'
+
+    // PokeAPI
+    // TODO (2) me.sargunvohra.lib:pokekotlin:2.3.0 추가
 }
